--- a/app/src/main/res/layout-land/combined_fragment.xml
+++ b/app/src/main/res/layout-land/combined_fragment.xml
@@ -17,8 +17,9 @@
                       android:text="@string/run_fragment_started"
                       tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_startedTextView"
-                      android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -45,7 +46,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run__starting_altitudeTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -58,7 +60,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_starting_addressTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <LinearLayout
             android:orientation="horizontal"
@@ -96,7 +99,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_endedTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -123,7 +127,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run__ending_altitudeTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -136,7 +141,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry" />
             <TextView android:id="@+id/run_ending_address_TextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -149,7 +155,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_durationTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -162,7 +169,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/distance_coveredTextView"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
 
     </TableLayout>
