--- a/app/src/main/res/layout-large-land/combined_fragment.xml
+++ b/app/src/main/res/layout-large-land/combined_fragment.xml
@@ -18,7 +18,8 @@
                       tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_startedTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -45,7 +46,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run__starting_altitudeTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -58,7 +60,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_starting_addressTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <LinearLayout
             android:orientation="horizontal"
@@ -97,7 +100,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_endedTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -124,7 +128,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run__ending_altitudeTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -137,7 +142,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry" />
             <TextView android:id="@+id/run_ending_address_TextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -150,7 +156,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/run_durationTextView"
                       android:layout_width="fill_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
         <TableRow>
             <TextView
@@ -163,7 +170,8 @@
                 tools:ignore="RtlHardcoded,RtlSymmetry"/>
             <TextView android:id="@+id/distance_coveredTextView"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:gravity="start"/>
         </TableRow>
 
     </TableLayout>
